# rustlambda

./: .gitignore  Cargo.toml  README.md  README.org
benches/: benchmark.rs
res/: 2pow  3cubed  5pow5  iterfact  lib  prgt  recfact  scott  test  test2  test3  test_div  test_iterfact  test_rec_factorial  test_recfact  test_recfact_inline  test_sub
src/: eval.rs  expr.rs  lex.rs  lib.rs  main.rs  parse.rs  print.rs  repl.rs  test.rs  types.rs
src/eval/: eval.rs  mod.rs  tests.rs  util.rs
