[package]
name = "rustlambda"
version = "0.1.0"
authors = ["Miky <haroldvemeno@email.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
empty-box = "~0.1"
structopt = "~0.3"

[dev-dependencies]
criterion = "~0.3"

[[bench]]
name = "benchmark"
harness = false
